[project]
name = "oessa"
version = "0.0.1"
authors = [{name = "Vassilis Bitsikas"}]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    'tensorflow==2.3.0',
    'easycython',
    'DPA',
    'joblib',
    'sonpy',
    'h5py',
    'nitime',
    'importlib-metadata; python_version<"3.10"',
]


[tool.setuptools]
py-modules = []

[project.urls]
Home = "https://github.com/VBits/oessa"